ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Hide
      buildscripts/resmoke.py run --suites=no_passthrough_with_mongod --mongodSetParameters='{featureFlagSBE: true}' jstests/noPassthroughWithMongod/now_variable.js 
      Show
      buildscripts/resmoke.py run --suites=no_passthrough_with_mongod --mongodSetParameters='{featureFlagSBE: true}' jstests/noPassthroughWithMongod/now_variable.js
    • Query Execution 2021-04-19, Query Execution 2021-05-03
    • 164
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      j6] {"t":{"$date":"2021-04-11T16:13:22.890+00:00"},"s":"F",  "c":"-",        "id":23079,   "ctx":"conn16","msg":"Invariant failure","attr":{"expr":"it != _context->environment.end()","file":"src/mongo/db/query/sbe_stage_builder_expression.cpp","line":1797}}
      [j6] {"t":{"$date":"2021-04-11T16:13:22.890+00:00"},"s":"F",  "c":"-",        "id":23080,   "ctx":"conn16","msg":"\n\n***aborting after invariant() failure\n\n"}
      [j6] {"t":{"$date":"2021-04-11T16:13:22.890+00:00"},"s":"F",  "c":"CONTROL",  "id":4757800, "ctx":"conn16","msg":"Writing fatal message","attr":{"message":"Got signal: 6 (Aborted).\n"}}
      [j6] {"t":{"$date":"2021-04-11T16:13:23.135+00:00"},"s":"I",  "c":"CONTROL",  "id":31380,   "ctx":"conn16","msg":"BACKTRACE","attr":{"bt":{"backtrace":[{"a":"7F0DE69DB0A2","b":"7F0DE67E6000","o":"1F50A2","s":"_ZN5mongo18stack_trace_detail12_GLOBAL__N_119printStackTraceImplERKNS1_7OptionsEPNS_14StackTraceSinkE.constprop.630","s+":"212"},{"a":"7F0DE69DCAD9","b":"7F0DE67E6000","o":"1F6AD9","s":"_ZN5mongo15printStackTraceEv","s+":"29"},{"a":"7F0DE69D800F","b":"7F0DE67E6000","o":"1F200F","s":"abruptQuit","s+":"6F"},{"a":"7F0DE4DF4D80","b":"7F0DE4DE2000","o":"12D80","s":"funlockfile","s+":"50"},{"a":"7F0DE46D393F","b":"7F0DE469C000","o":"3793F","s":"gsignal","s+":"10F"},{"a":"7F0DE46BDC95","b":"7F0DE469C000","o":"21C95","s":"abort","s+":"127"},{"a":"7F0DE6906714","b":"7F0DE67E6000","o":"120714","s":"_ZN5mongo15invariantFailedEPKcS1_j","s+":"12C"},{"a":"7F0DE1835F06","b":"7F0DE1629000","o":"20CF06","s":"_ZN5mongo13stage_builder12_GLOBAL__N_121ExpressionPostVisitor5visitEPNS_19ExpressionFieldPathE","s+":"96"},{"a":"7F0DE181729E","b":"7F0DE1629000","o":"1EE29E","s":"_ZN5mongo17expression_walker4walkINS_13stage_builder12_GLOBAL__N_116ExpressionWalkerEEENSt11conditionalIX17hasReturningVisitIT_EESt10unique_ptrINS_10ExpressionESt14default_deleteIS8_EEvE4typeEPS6_PS8_","s+":"7E"},{"a":"7F0DE1817273","b":"7F0DE1629000","o":"1EE273","s":"_ZN5mongo17expression_walker4walkINS_13stage_builder12_GLOBAL__N_116ExpressionWalkerEEENSt11conditionalIX17hasReturningVisitIT_EESt10unique_ptrINS_10ExpressionESt14default_deleteIS8_EEvE4typeEPS6_PS8_","s+":"53"},{"a":"7F0DE1832F8A","b":"7F0DE1629000","o":"209F8A","s":"_ZN5mongo13stage_builder18generateExpressionEPNS_16OperationContextEPNS_10ExpressionESt10unique_ptrINS_3sbe9PlanStageESt14default_deleteIS7_EEPNS_11IdGeneratorIlEESD_lPNS6_18RuntimeEnvironmentEjPSt6vectorIlSaIlEE","s+":"3AA"},{"a":"7F0DE1840FAE","b":"7F0DE1629000","o":"217FAE","s":"_ZN5mongo13stage_builder12_GLOBAL__N_126MatchExpressionPostVisitor5visitEPKNS_19ExprMatchExpressionE","s+":"15E"},{"a":"7F0DE1842F1A","b":"7F0DE1629000","o":"219F1A","s":"_ZN5mongo13stage_builder14generateFilterEPNS_16OperationContextEPKNS_15MatchExpressionESt10unique_ptrINS_3sbe9PlanStageESt14default_deleteIS8_EEPNS_11IdGeneratorIlEESE_lPNS7_18RuntimeEnvironmentESt6vectorIlSaIlEEjb","s+":"2CA"},{"a":"7F0DE1814B9D","b":"7F0DE1629000","o":"1EBB9D","s":"_ZN5mongo13stage_builder12_GLOBAL__N_123generateGenericCollScanEPNS_16OperationContextERKNS_13CollectionPtrEPKNS_18CollectionScanNodeEPNS_11IdGeneratorIlEESC_PNS_15PlanYieldPolicyEPNS_3sbe18RuntimeEnvironmentEbSt8functionIFvS3_RKNS_37AutoGetCollectionForReadMaybeLockFreeEEE","s+":"F9D"},{"a":"7F0DE181514C","b":"7F0DE1629000","o":"1EC14C","s":"_ZN5mongo13stage_builder16generateCollScanEPNS_16OperationContextERKNS_13CollectionPtrEPKNS_18CollectionScanNodeEPNS_11IdGeneratorIlEESB_PNS_15PlanYieldPolicyEPNS_3sbe18RuntimeEnvironmentEbSt8functionIFvS2_RKNS_37AutoGetCollectionForReadMaybeLockFreeEEE","s+":"FC"},{"a":"7F0DE17F9D9B","b":"7F0DE1629000","o":"1D0D9B","s":"_ZN5mongo13stage_builder21SlotBasedStageBuilder13buildCollScanEPKNS_17QuerySolutionNodeERKNS0_13PlanStageReqsE","s+":"8B"},{"a":"7F0DE1806342","b":"7F0DE1629000","o":"1DD342","s":"_ZNSt17_Function_handlerIFSt4pairISt10unique_ptrIN5mongo3sbe9PlanStageESt14default_deleteIS4_EENS2_13stage_builder14PlanStageSlotsEERNS8_21SlotBasedStageBuilderEPKNS2_17QuerySolutionNodeERKNS8_13PlanStageReqsEEMSB_FSA_SF_SI_EE9_M_invokeERKSt9_Any_dataSC_OSF_SI_","s+":"42"},{"a":"7F0DE17FCBDA","b":"7F0DE1629000","o":"1D3BDA","s":"_ZN5mongo13stage_builder21SlotBasedStageBuilder5buildEPKNS_17QuerySolutionNodeERKNS0_13PlanStageReqsE","s+":"1EA"},{"a":"7F0DE17FD4E6","b":"7F0DE1629000","o":"1D44E6","s":"_ZN5mongo13stage_builder21SlotBasedStageBuilder5buildEPKNS_17QuerySolutionNodeE","s+":"136"},{"a":"7F0DE1862CB3","b":"7F0DE1629000","o":"239CB3","s":"_ZN5mongo13stage_builder28buildSlotBasedExecutableTreeEPNS_16OperationContextERKNS_13CollectionPtrERKNS_14CanonicalQueryERKNS_13QuerySolutionEPNS_15PlanYieldPolicyE","s+":"F3"},{"a":"7F0DE17C31B2","b":"7F0DE1629000","o":"19A1B2","s":"_ZN5mongo12_GLOBAL__N_120getSlotBasedExecutorEPNS_16OperationContextEPKNS_13CollectionPtrESt10unique_ptrINS_14CanonicalQueryESt14default_deleteIS7_EENS_15PlanYieldPolicy11YieldPolicyEm","s+":"17A2"},{"a":"7F0DE17C670B","b":"7F0DE1629000","o":"19D70B","s":"_ZN5mongo11getExecutorEPNS_16OperationContextEPKNS_13CollectionPtrESt10unique_ptrINS_14CanonicalQueryESt14default_deleteIS6_EENS_15PlanYieldPolicy11YieldPolicyEm","s+":"18B"},{"a":"7F0DE17C6B3F","b":"7F0DE1629000","o":"19DB3F","s":"_ZN5mongo12_GLOBAL__N_116_getExecutorFindEPNS_16OperationContextEPKNS_13CollectionPtrESt10unique_ptrINS_14CanonicalQueryESt14default_deleteIS7_EENS_15PlanYieldPolicy11YieldPolicyEm","s+":"6F"},{"a":"7F0DE17C6BD1","b":"7F0DE1629000","o":"19DBD1","s":"_ZN5mongo15getExecutorFindEPNS_16OperationContextEPKNS_13CollectionPtrESt10unique_ptrINS_14CanonicalQueryESt14default_deleteIS6_EEbm","s+":"51"},{"a":"7F0DDB603788","b":"7F0DDB53D000","o":"C6788","s":"_ZN5mongo12_GLOBAL__N_17FindCmd10Invocation3runEPNS_16OperationContextEPNS_3rpc21ReplyBuilderInterfaceE","s+":"768"},{"a":"7F0DDFCC529F","b":"7F0DDFC87000","o":"3E29F","s":"_ZN5mongo14CommandHelpers20runCommandInvocationEPNS_16OperationContextERKNS_12OpMsgRequestEPNS_17CommandInvocationEPNS_3rpc21ReplyBuilderInterfaceE","s+":"7F"},{"a":"7F0DDFCCA76E","b":"7F0DDFC87000","o":"4376E","s":"_ZN5mongo14CommandHelpers20runCommandInvocationESt10shared_ptrINS_23RequestExecutionContextEES1_INS_17CommandInvocationEENS_9transport15ServiceExecutor14ThreadingModelE","s+":"1BE"},{"a":"7F0DDDC31C87","b":"7F0DDDC05000","o":"2CC87","s":"_ZN5mongo12_GLOBAL__N_120runCommandInvocationESt10shared_ptrINS_23RequestExecutionContextEES1_INS_17CommandInvocationEE","s+":"97"},{"a":"7F0DDDC44004","b":"7F0DDDC05000","o":"3F004","s":"_ZN5mongo12_GLOBAL__N_114RunCommandImpl11_runCommandEv","s+":"154"},{"a":"7F0DDDC44FB3","b":"7F0DDDC05000","o":"3FFB3","s":"_ZN5mongo12_GLOBAL__N_114RunCommandImpl8_runImplEv","s+":"93"},{"a":"7F0DDDC37489","b":"7F0DDDC05000","o":"32489","s":"_ZN5mongo12_GLOBAL__N_114RunCommandImpl3runEv","s+":"139"},{"a":"7F0DDDC37CCB","b":"7F0DDDC05000","o":"32CCB","s":"_ZN5mongo12_GLOBAL__N_119ExecCommandDatabase12_commandExecEv","s+":"33B"},{"a":"7F0DDDC402A3","b":"7F0DDDC05000","o":"3B2A3","s":"_ZZN5mongo12_GLOBAL__N_114executeCommandESt10shared_ptrINS0_13HandleRequest16ExecutionContextEEENUlvE0_clEv","s+":"453"},{"a":"7F0DDDC42370","b":"7F0DDDC05000","o":"3D370","s":"_ZZN5mongo15unique_functionIFvPNS_14future_details15SharedStateBaseEEE8makeImplIZNS1_10FutureImplINS1_8FakeVoidEE16makeContinuationIvZZNOS9_4thenIZNS_12_GLOBAL__N_114executeCommandESt10shared_ptrINSC_13HandleRequest16ExecutionContextEEEUlvE0_EEDaOT_ENKUlvE1_clEvEUlPNS1_15SharedStateImplIS8_EESN_E_EENS7_ISI_EEOT0_EUlS3_E_EEDaSJ_EN12SpecificImpl4callEOS3_","s+":"80"},{"a":"7F0DE6B49B2F","b":"7F0DE6B12000","o":"37B2F","s":"_ZN5mongo14future_details15SharedStateBase20transitionToFinishedEv","s+":"12F"},{"a":"7F0DE3E66C82","b":"7F0DE3DF1000","o":"75C82","s":"_ZN5mongo14future_details10FutureImplINS0_8FakeVoidEE11generalImplIZNOS3_17propagateResultToEPNS0_15SharedStateImplIS2_EEEUlOS2_E_ZNOS3_17propagateResultToES7_EUlONS_6StatusEE0_ZNOS3_17propagateResultToES7_EUlvE1_EEDaOT_OT0_OT1_","s+":"152"},{"a":"7F0DDDC3CC6C","b":"7F0DDDC05000","o":"37C6C","s":"_ZZN5mongo15unique_functionIFvPNS_14future_details15SharedStateBaseEEE8makeImplIZNS1_10FutureImplINS1_8FakeVoidEE16makeContinuationIvZZNOS9_4thenIZNS_12_GLOBAL__N_114executeCommandESt10shared_ptrINSC_13HandleRequest16ExecutionContextEEEUlvE_EEDaOT_ENKUlvE1_clEvEUlPNS1_15SharedStateImplIS8_EESN_E_EENS7_ISI_EEOT0_EUlS3_E_EEDaSJ_EN12SpecificImpl4callEOS3_","s+":"AC"},{"a":"7F0DE6B49B2F","b":"7F0DE6B12000","o":"37B2F","s":"_ZN5mongo14future_details15SharedStateBase20transitionToFinishedEv","s+":"12F"},{"a":"7F0DDDC40C71","b":"7F0DDDC05000","o":"3BC71","s":"_ZN5mongo12_GLOBAL__N_114executeCommandESt10shared_ptrINS0_13HandleRequest16ExecutionContextEE","s+":"211"},{"a":"7F0DDDC415DB","b":"7F0DDDC05000","o":"3C5DB","s":"_ZN5mongo12_GLOBAL__N_116receivedCommandsESt10shared_ptrINS0_13HandleRequest16ExecutionContextEE","s+":"1BB"},{"a":"7F0DDDC422B6","b":"7F0DDDC05000","o":"3D2B6","s":"_ZN5mongo12_GLOBAL__N_115CommandOpRunner3runEv","s+":"36"},{"a":"7F0DDDC392A8","b":"7F0DDDC05000","o":"342A8","s":"_ZZN5mongo23ServiceEntryPointCommon13handleRequestEPNS_16OperationContextERKNS_7MessageESt10unique_ptrIKNS0_5HooksESt14default_deleteIS8_EEENKUlvE_clEv","s+":"A8"},{"a":"7F0DDDC397F4","b":"7F0DDDC05000","o":"347F4","s":"_ZZNO5mongo14future_details10FutureImplINS0_8FakeVoidEE4thenIZNS_23ServiceEntryPointCommon13handleRequestEPNS_16OperationContextERKNS_7MessageESt10unique_ptrIKNS5_5HooksESt14default_deleteISD_EEEUlvE_EEDaOT_ENKUlOS2_E_clESK_.isra.2225","s+":"24"},{"a":"7F0DDDC3B719","b":"7F0DDDC05000","o":"36719","s":"_ZN5mongo23ServiceEntryPointCommon13handleRequestEPNS_16OperationContextERKNS_7MessageESt10unique_ptrIKNS0_5HooksESt14default_deleteIS8_EE","s+":"2D9"},{"a":"7F0DE33E7113","b":"7F0DE33DD000","o":"A113","s":"_ZN5mongo23ServiceEntryPointMongod13handleRequestEPNS_16OperationContextERKNS_7MessageE","s+":"53"},{"a":"7F0DE33C8B67","b":"7F0DE3396000","o":"32B67","s":"_ZN5mongo9transport19ServiceStateMachine4Impl14processMessageEv","s+":"127"},{"a":"7F0DE33C8F67","b":"7F0DE3396000","o":"32F67","s":"_ZZNO5mongo14future_details10FutureImplINS0_8FakeVoidEE4thenIZNS_9transport19ServiceStateMachine4Impl12startNewLoopERKNS_6StatusEEUlvE0_EEDaOT_ENKUlOS2_E_clESE_.isra.740","s+":"27"},{"a":"7F0DE33CB760","b":"7F0DE3396000","o":"35760","s":"_ZN5mongo9transport19ServiceStateMachine4Impl12startNewLoopERKNS_6StatusE","s+":"240"},{"a":"7F0DE33CBC3F","b":"7F0DE3396000","o":"35C3F","s":"_ZZN5mongo15unique_functionIFvNS_6StatusEEE8makeImplIZZNS_9transport19ServiceStateMachine4Impl12startNewLoopERKS1_ENKUlS1_E2_clES1_EUlS1_E0_EEDaOT_EN12SpecificImpl4callEOS1_","s+":"7F"},{"a":"7F0DDFD6FC31","b":"7F0DDFD3D000","o":"32C31","s":"_ZZN5mongo15unique_functionIFvNS_6StatusEEE8makeImplIZNS_9transport26ServiceExecutorSynchronous18runOnDataAvailableERKSt10shared_ptrINS5_7SessionEES3_EUlS1_E_EEDaOT_EN12SpecificImpl4callEOS1_","s+":"41"},{"a":"7F0DE31DA9C3","b":"7F0DE2FA4000","o":"2369C3","s":"_ZZN5mongo15unique_functionIFvvEE8makeImplIZNS_9transport15ServiceExecutor8scheduleENS0_IFvNS_6StatusEEEEEUlvE_EEDaOT_EN12SpecificImpl4callEv","s+":"33"},{"a":"7F0DDFD72910","b":"7F0DDFD3D000","o":"35910","s":"_ZZN5mongo15unique_functionIFvvEE8makeImplIZNS_9transport26ServiceExecutorSynchronous12scheduleTaskES2_NS4_15ServiceExecutor13ScheduleFlagsEEUlvE0_EEDaOT_EN12SpecificImpl4callEv","s+":"B0"},{"a":"7F0DDFD73F6C","b":"7F0DDFD3D000","o":"36F6C","s":"_ZZN5mongo15unique_functionIFvvEE8makeImplIZNS_25launchServiceWorkerThreadES2_EUlvE2_EEDaOT_EN12SpecificImpl4callEv","s+":"5C"},{"a":"7F0DDFD73FDC","b":"7F0DDFD3D000","o":"36FDC","s":"_ZN5mongo12_GLOBAL__N_17runFuncEPv","s+":"1C"},{"a":"7F0DE4DEA2DE","b":"7F0DE4DE2000","o":"82DE","s":"start_thread","s+":"FE"},{"a":"7F0DE4798A63","b":"7F0DE469C000","o":"FCA63","s":"clone","s+":"43"}],"processInfo":{"mongodbVersion":"5.0.0-alpha-47-g4fb8fa9-patch-6073178fa4cf4727fc7e2cd5","gitVersion":"4fb8fa99ad6bda23030204ef29fb8cbfffc19082","compiledModules":["enterprise"],"uname":{"sysname":"Linux","release":"4.18.0-80.1.2.el8_0.x86_64","version":"#1 SMP Sun Apr 28 09:21:22 UTC 2019","machine":"x86_64"},"somap":[{"b":"7F0DE67E6000","path":"/data/mci/1c9cd13c56a553224a25c3e61c57d4c0/src/dist-test/bin/../lib/libbase.so","elfType":3,"buildId":"EF9542DA520034AE5413DA2D682BFFB3693A0A18"},{"b":"7F0DE6B12000","path":"/data/mci/1c9cd13c56a553224a25c3e61c57d4c0/src/dist-test/bin/../lib/libmongod_main.so","elfType":3,"buildId":"2B25206F3D0EE78775ADEE2B9F557586100DF427"},{"b":"7F0DE4DE2000","path":"/lib64/libpthread.so.0","elfType":3,"buildId":"5326B8728FA01B7149DAC943100F1405533E76CE"},{"b":"7F0DE469C000","path":"/lib64/libc.so.6","elfType":3,"buildId":"0598B7D6A05E64AE676133CF6331AF5578888AD0"},{"b":"7F0DE3DF1000","path":"/data/mci/1c9cd13c56a553224a25c3e61c57d4c0/src/dist-test/bin/../lib/../lib/libtransport_layer.so","elfType":3,"buildId":"1701B2AFB2412F119742B4D7BD66AB60ACA912E2"},{"b":"7F0DE1629000","path":"/data/mci/1c9cd13c56a553224a25c3e61c57d4c0/src/dist-test/bin/../lib/../lib/libquery_exec.so","elfType":3,"buildId":"8794EDC8B614187CE35390373E037FD306E657D1"},{"b":"7F0DDFC87000","path":"/data/mci/1c9cd13c56a553224a25c3e61c57d4c0/src/dist-test/bin/../lib/../lib/libcommands.so","elfType":3,"buildId":"D988D434A20513776BC39B5BA26A781A7C2354FA"},{"b":"7F0DDDC05000","path":"/data/mci/1c9cd13c56a553224a25c3e61c57d4c0/src/dist-test/bin/../lib/../lib/../lib/libservice_entry_point_common.so","elfType":3,"buildId":"1C0BEB21C29858796530171D47B031AB7630F928"},{"b":"7F0DDB53D000","path":"/data/mci/1c9cd13c56a553224a25c3e61c57d4c0/src/dist-test/bin/../lib/../lib/../lib/libstandalone.so","elfType":3,"buildId":"2CD80B73F8AA6B5DB853E398DF3795D2509E8354"}]}}}}
      [j6] {"t":{"$date":"2021-04-11T16:13:23.135+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn16","msg":"Frame","attr":{"frame":{"a":"7F0DE69DB0A2","b":"7F0DE67E6000","o":"1F50A2","s":"_ZN5mongo18stack_trace_detail12_GLOBAL__N_119printStackTraceImplERKNS1_7OptionsEPNS_14StackTraceSinkE.constprop.630","s+":"212"}}}
      [j6] {"t":{"$date":"2021-04-11T16:13:23.135+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn16","msg":"Frame","attr":{"frame":{"a":"7F0DE69DCAD9","b":"7F0DE67E6000","o":"1F6AD9","s":"_ZN5mongo15printStackTraceEv","s+":"29"}}}
      [j6] {"t":{"$date":"2021-04-11T16:13:23.135+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn16","msg":"Frame","attr":{"frame":{"a":"7F0DE69D800F","b":"7F0DE67E6000","o":"1F200F","s":"abruptQuit","s+":"6F"}}}
      [j6] {"t":{"$date":"2021-04-11T16:13:23.135+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn16","msg":"Frame","attr":{"frame":{"a":"7F0DE4DF4D80","b":"7F0DE4DE2000","o":"12D80","s":"funlockfile","s+":"50"}}}
      [j6] {"t":{"$date":"2021-04-11T16:13:23.135+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn16","msg":"Frame","attr":{"frame":{"a":"7F0DE46D393F","b":"7F0DE469C000","o":"3793F","s":"gsignal","s+":"10F"}}}
      [j6] {"t":{"$date":"2021-04-11T16:13:23.135+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn16","msg":"Frame","attr":{"frame":{"a":"7F0DE46BDC95","b":"7F0DE469C000","o":"21C95","s":"abort","s+":"127"}}}
      [j6] {"t":{"$date":"2021-04-11T16:13:23.135+00:00"},"s":"I",  "c":"CONTROL",  "id":31445,   "ctx":"conn16","msg":"Frame","attr":{"frame":{"a":"7F0DE6906714","b":"7F0DE67E6000","o":"120714","s":"_ZN5mongo15invariantFailedEPKcS1_j","s+":"12C"}}}
      ...
      [js_test:now_variable] Error: error doing query: failed: network error while attempting to run command 'find' on host 'localhost:21500'  :
      [js_test:now_variable] DB.prototype.runCommand@src/mongo/shell/db.js:177:19
      [js_test:now_variable] baseCollectionClusterTimeFind@jstests/noPassthroughWithMongod/now_variable.js:69:12
      [js_test:now_variable] runTestsExpectFailure@jstests/noPassthroughWithMongod/now_variable.js:59:21
      [js_test:now_variable] @jstests/noPassthroughWithMongod/now_variable.js:118:1
      [js_test:now_variable] @jstests/noPassthroughWithMongod/now_variable.js:4:2
      [js_test:now_variable] failed to load: jstests/noPassthroughWithMongod/now_variable.js
      [js_test:now_variable] exiting with code -3

      Task.

            Assignee:
            Drew Paroski (Inactive)
            Reporter:
            Anton Korshunov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: