SERVER-56113 [SBE] Fix visit(ExpressionFieldPath*) to handle all builtin $$ variables